# helium

./: .gitignore  .neoconf.json  7  Makefile  README.md  rust-toolchain
.github/workflows/: rust.yml
iso/boot/: init.s  limine.cfg
kernel/: Cargo.toml  rust-toolchain.toml
kernel/config/: link.ld  x86_64.json
kernel/crates/helium-addr/: Cargo.toml
kernel/crates/helium-addr/src/: frame.rs  lib.rs  phys.rs  user.rs  virt.rs
kernel/crates/helium-kernel/: Cargo.toml
kernel/crates/helium-kernel/src/: exception.rs  irq.rs  lib.rs
kernel/crates/helium-lib/: Cargo.toml
kernel/crates/helium-lib/src/: align.rs  byte.rs  lib.rs  range.rs
kernel/crates/helium-macros/: Cargo.toml
kernel/crates/helium-macros/src/: lib.rs
kernel/crates/helium-mm/: Cargo.toml
kernel/crates/helium-mm/src/: heap.rs  lib.rs
kernel/crates/helium-mm/src/frame/: mod.rs  state.rs
kernel/crates/helium-mm/src/frame/allocator/: dummy.rs
kernel/crates/helium-sync/: Cargo.toml
kernel/crates/helium-sync/src/: lazy.rs  lib.rs  once.rs
kernel/crates/helium-user/: Cargo.toml
kernel/crates/helium-user/src/: elf.rs  lib.rs  syscall.rs  task.rs
kernel/crates/helium-user/src/scheduler/: mod.rs  round_robin.rs
kernel/crates/helium-user/src/syscall/: mod.rs  task.rs  task_exit.rs
kernel/crates/helium-utils/: Cargo.toml
kernel/crates/helium-utils/src/: align.rs  byte.rs
kernel/crates/helium-x86_64/: Cargo.toml
kernel/crates/helium-x86_64/src/: cpu.rs  exception.rs  gdt.rs  idt.rs  instruction.rs  io.rs  irq.rs  lapic.rs  lib.rs  msr.rs  paging.rs  percpu.rs  pic.rs  pit.rs  serial.rs  smp.rs  syscall.rs  thread.rs  tlb.rs  tss.rs
kernel/crates/helium-x86_64/src/asm/: interrupt.asm  syscall.asm  thread.asm
kernel/src/: config.rs  glue.rs  kernel.rs  limine.rs  logger.rs  main.rs  module.rs  panic.rs  qemu.rs
kernel/src/arch/: exception.rs  gdt.rs  idt.rs  io.rs  irq.rs  lapic.rs  mod.rs  msr.rs  paging.rs  percpu.rs  pic.rs  pit.rs  serial.rs  smp.rs  thread.rs  tss.rs
kernel/src/device/: mod.rs
kernel/src/fs/: mod.rs
kernel/src/fs/ramfs/: fs.rs  interface.rs  mod.rs  mount.rs
kernel/src/mm/: heap.rs  mod.rs
kernel/src/mm/cache/: mod.rs  page.rs
kernel/src/mm/frame/: mod.rs  owned.rs  state.rs
kernel/src/mm/frame/allocator/: dummy.rs  mod.rs
kernel/src/mm/vmm/: area.rs  mod.rs
kernel/src/syscall/: clock.rs  mmu.rs  mod.rs  serial.rs  task.rs  vfs.rs  video.rs
kernel/src/time/: date.rs  mod.rs  timer.rs  units.rs  unix.rs
kernel/src/user/: buffer.rs  elf.rs  mod.rs  object.rs  pointer.rs  string.rs  task.rs
kernel/src/user/scheduler/: mod.rs  round_robin.rs
kernel/src/user/task/: elf.rs  mod.rs  mutex.rs  preempt.rs  queue.rs
kernel/src/user/vmm/: area.rs  mod.rs
kernel/src/vfs/: dentry.rs  dirent.rs  fd.rs  file.rs  fs.rs  inode.rs  mod.rs  mount.rs  name.rs  path.rs
kernel/src/vfs/pipe/: mod.rs  reader.rs  writer.rs
kernel/src/x86_64/: apic.rs  cmos.rs  cpu.rs  exception.rs  fpu.rs  gdt.rs  idt.rs  instruction.rs  io.rs  irq.rs  lapic.rs  mod.rs  msr.rs  paging.rs  percpu.rs  pic.rs  pit.rs  serial.rs  smp.rs  syscall.rs  thread.rs  tlb.rs  tss.rs  user.rs
kernel/src/x86_64/asm/: interrupt.asm  syscall.asm  thread.asm
kernel/src/x86_64/paging/: mod.rs  table.rs  tlb.rs
patch/: rust.diff
scripts/: add_user_toolchain.sh  build_iso.sh  build_limine.sh  build_rust.sh  download_rust.sh  first_build.sh  patch_rust.sh  run.sh  run_debug.sh  run_tests.sh  runner.sh
user/: Makefile  install_package.sh
user/init/: Cargo.toml  config.toml  install.sh
user/init/.cargo/: config.toml  x86_64.json
user/init/src/: main.rs
user/iron/: Cargo.toml  rust-toolchain.toml
user/iron/.cargo/: config.toml  x86_64.json
user/iron/src/: alloc.rs  lib.rs  macros.rs  mmu.rs  process.rs  serial.rs  syscall.asm  task.rs
user/iron/src/syscall/: mmu.rs  mod.rs  serial.rs  task.rs  vfs.rs  video.rs
user/shell/: Cargo.toml  install.sh
user/shell/.cargo/: config.toml
user/shell/src/: main.rs
user/stub/: Makefile  main.s
user/syscall/: Cargo.toml
user/syscall/.cargo/: x86_64.json
user/syscall/src/: clock.rs  lib.rs  mmu.rs  serial.rs  task.rs  vfs.rs  video.rs
user/template/: Cargo.toml
user/template/src/: main.rs
