[package]
name = "kernel"
version = "0.0.1"
edition = "2021"
license = "MIT / Apache-2.0"

[dependencies]
macros = { path = "crates/helium-macros", package = "helium-macros" }
sync = { path = "crates/helium-sync", package = "helium-sync" }
addr = { path = "crates/helium-addr", package = "helium-addr" }
lib = { path = "crates/helium-lib", package = "helium-lib" }
elf = { version = "0.7.2", default-features = false }
scopeguard = { version = "1.2.0", default-features = false }

linked_list_allocator = "0.10.5"
typed-builder = "0.18.0"
bitfield = "0.14.0"
bitflags = "2.2.1"
limine = "0.1.12"
cfg-if = "1.0.0"
log = "0.4.17"

[features]
default = []
test = ["qemu"]
qemu = []

[profile.release]
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
opt-level = 2
debug = false
lto = true
