[package]
name = "iron"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.3.3"
spin = "0.9.8"
talc = "3.1.2"

# Dependencies for rustc-dep-of-std that allow the crate to compile
# as a dependency of std. Useful for porting the rust std...
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.105", optional = true }
cfg-if = "1.0"

[features]
rustc-dep-of-std = [
	"core",
	"compiler_builtins",
	"cfg-if/rustc-dep-of-std"
]