[package]
name = "helium-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../helium-macros", package = "helium-macros" }
x86_64 = { path = "../helium-x86_64", package = "helium-x86_64" }
user = { path = "../helium-user", package = "helium-user" }
sync = { path = "../helium-sync", package = "helium-sync" }
addr = { path = "../helium-addr", package = "helium-addr" }
mm = { path = "../helium-mm", package = "helium-mm" }

log = "0.4.14"