[package]
name = "helium-mm"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../helium-macros", package = "helium-macros" }
utils = { path = "../helium-utils", package = "helium-utils" }
addr = { path = "../helium-addr", package = "helium-addr" }
sync = { path = "../helium-sync", package = "helium-sync" }

linked_list_allocator = "0.10.5"
bitfield = "0.14.0"
bitflags = "2.2.1"
limine = "0.1.10"
log = "0.4.17"
